// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSimplifiedBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="ouiSimplifiedBreadcrumbs testClass1 testClass2 ouiSimplifiedBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Chordates
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Chordates
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs ouiSimplifiedBreadcrumbs--truncate"
>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;

exports[`OuiSimplifiedBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="ouiSimplifiedBreadcrumbs"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="false"
    class="ouiSimplifiedBreadcrumb"
  >
    Metazoans
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <div
    class="ouiPopover ouiPopover--anchorDownCenter ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--collapsed"
  >
    <div
      class="ouiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <span
          data-ouiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;
